<resources>
    <string name="app_name">ContractApp</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="already_have_account">already have account?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_account">don\'t have account?</string>
    <string name="my_contracts">My Contracts</string>
    <string name="add_contract">Add Contract</string>
    <string name="new_contract">New Contract</string>
    <string name="_06_08_2001">06/08/2001</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="contract_details">Contract Details</string>
    <string name="dummy">dummy</string>
    <string name="vendor">Vendor</string>
    <string name="category">Category</string>
    <string name="costs">Costs</string>
    <string name="ends_on">Ends On</string>
    <string name="dol">$</string>
    <string name="add_contract_list">Add Contract</string>
    <string name="edit_contract_string">Edit Contract</string>
    <string name="update_string">Update</string>


    <string-array name="vendor_name">
        <item>Vodafone</item>
        <item>O2</item>
        <item>Vattenfall</item>
        <item>McFit</item>
        <item>Sky</item>
    </string-array>

    <string-array name="category_vodafone">
        <item>Internet</item>
        <item>DSL</item>
        <item>Phone</item>
        <item>Mobile</item>
        <item>Phone</item>
    </string-array>

    <string-array name="category_o2">
        <item>Internet</item>
        <item>DSL</item>
    </string-array>

    <string-array name="category_vattenfall">
        <item>Electricity</item>
        <item>Gas</item>
    </string-array>

    <string-array name="category_mcfit">
        <item>Gym</item>
    </string-array>

    <string-array name="category_sky">
        <item>Paid TV</item>
    </string-array>

</resources>