<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:gravity="center"
    tools:context=".SignUp">

    <LinearLayout
        android:orientation="vertical"
        android:background="#FF9800"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="40sp" />


            <TextView
                android:id="@+id/signup_fullname"
                android:layout_marginLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="2dp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:background="@drawable/input_boxes"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:layout_marginBottom="15dp"
                android:paddingRight="0dp"
                android:textColor="#000000"
                android:autofillHints=""
                tools:ignore="LabelFor" />


        <TextView
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="2dp">
        </TextView>
            <EditText
                android:id="@+id/signup_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/input_boxes"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#000000"
                android:autofillHints=""
                tools:ignore="LabelFor" />


        <TextView
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="2dp">
        </TextView>
            <EditText
                android:id="@+id/signup_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/input_boxes"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#000000"
                android:autofillHints=""
                tools:ignore="LabelFor" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/password_confirmation"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="2dp">
        </TextView>
        <EditText
            android:id="@+id/signup_confirm_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:background="@drawable/input_boxes"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="0dp"
            android:layout_marginBottom="30dp"
            android:paddingRight="0dp"
            android:textColor="#000000"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/signup_signup_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:background="@drawable/button_design"
            android:textSize="17sp"
            android:textAllCaps="false"
            app:backgroundTint="#11B154" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:paddingEnd="0dp"
                android:paddingStart="5dp" />

            <TextView
                android:id="@+id/signup_login_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:paddingStart="0dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
