<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:background="#FF9800"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_alternates"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />


        <TextView
            android:text="@string/email"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:fontFamily="@font/andika"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:textColor="#373737"
            android:textStyle="bold"
            android:layout_marginStart="2dp">
        </TextView>
        <EditText
            android:id="@+id/login_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/andika"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_boxes"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textColor="#000000"
            android:autofillHints=""
            tools:ignore="LabelFor" />


        <TextView
            android:text="@string/password"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika"
            android:textColor="#373737"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="2dp">
        </TextView>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"
            android:background="@drawable/input_boxes"
            android:paddingStart="25dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/andika"
            android:paddingLeft="25dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textColor="#000000"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <Button
            android:text="@string/login"
            android:id="@+id/login_login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_design"
            android:textSize="17sp"
            android:textAllCaps="false"
            app:backgroundTint="#11B154" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/don_t_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:paddingEnd="0dp"
                android:paddingStart="5dp" />

            <TextView
                android:id="@+id/login_signup_textview"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:paddingStart="0dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
