<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".EditContract">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginBottom="70dp"
        android:text="Edit Contract"
        android:fontFamily="@font/patrick_hand"
        android:textColor="#686868"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendor"
            android:textStyle="bold"
            android:fontFamily="@font/andika"
            android:textSize="15sp"
            android:textColor="#434343"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/edit_contract_vendor"
                android:layout_width="match_parent"
                android:background="@drawable/grey_box"
                android:layout_height="43dp"
                android:backgroundTint="#EFEFEF"
                >
            </Spinner>

            <ImageView
                android:layout_gravity="right|center"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"
                />
        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:fontFamily="@font/andika"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#434343"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/edit_contract_category"
                android:layout_width="match_parent"
                android:background="@drawable/grey_box"
                android:layout_height="43dp"
                android:backgroundTint="#EFEFEF"
                >
            </Spinner>

            <ImageView
                android:layout_gravity="right|center"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"
                />
        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/costs"
            android:textStyle="bold"
            android:fontFamily="@font/andika"
            android:textSize="15sp"
            android:textColor="#434343"
            />

        <EditText
            android:id="@+id/edit_contract_costs"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:inputType="number"
            android:backgroundTint="#E4E4E4"
            android:background="@drawable/grey_box"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="0dp"
            android:layout_marginBottom="25dp"
            android:paddingRight="0dp"
            android:textColor="#000000"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ends_on"
            android:textStyle="bold"
            android:fontFamily="@font/andika"
            android:textSize="15sp"
            android:textColor="#434343"
            />

        <TextView
            android:id="@+id/edit_contract_date"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:text="@string/_06_08_2001"
            android:padding="11dp"
            android:layout_height="43dp"
            android:paddingStart="20dp"
            android:backgroundTint="#E4E4E4"
            android:background="@drawable/grey_box"
            android:drawableRight="@drawable/ic_baseline_calendar_today_24"
            android:paddingLeft="20dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textColor="#000000"
            android:layout_marginBottom="25dp">
        </TextView>

        <Button
            android:text="Update"
            android:id="@+id/edit_contract_create_button"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/button_design"
            android:textSize="17sp"
            android:textAllCaps="false"
            app:backgroundTint="#FF9800" />

    </LinearLayout>
</LinearLayout>